WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271455
[Skia] Fix background-size behavior when background repeats
https://bugs.webkit.org/show_bug.cgi?id=271455
Summary
[Skia] Fix background-size behavior when background repeats
Pawel Lampe
Reported
2024-03-22 01:31:29 PDT
To test, run & compare demos from
https://developer.mozilla.org/en-US/docs/Web/CSS/background-size
against cairo build
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2024-03-22 01:43:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26305
EWS
Comment 2
2024-04-03 04:54:45 PDT
Committed
276995@main
(8f3e5c6bf810): <
https://commits.webkit.org/276995@main
> Reviewed commits have been landed. Closing PR #26305 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug