[Skia] Fix background-size behavior when background repeats https://bugs.webkit.org/show_bug.cgi?id=271455

Reviewed by Carlos Garcia Campos.

GraphicsContextSkia::drawPattern is being invoked only when the pattern repetition is expected.
Hence this change removes spurious conditional repetition.

* Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContextSkia::drawPattern):

Canonical link: https://commits.webkit.org/276995@main